# CRISS-Probation-Task-

./: Commands to run .txt  README.md  aruco_nav.py  landmark_detection_node.py  landmark_localization_node.py  landmark_logger_node.py  mars_msgs.tar.xz  result.json  result_2.json  work.py
All Landmarks 1/landmark_10/: data.json
All Landmarks 1/landmark_11/: data.json
All Landmarks 1/landmark_12/: data.json
All Landmarks 1/landmark_13/: data.json
All Landmarks 1/landmark_14/: data.json
All Landmarks 1/landmark_15/: data.json
All Landmarks 1/landmark_16/: data.json
All Landmarks 1/landmark_17/: data.json
All Landmarks 1/landmark_18/: data.json
All Landmarks 1/landmark_19/: data.json
All Landmarks 1/landmark_8/: data.json
All Landmarks 1/landmark_9/: data.json
All Landmarks 2/landmark_1/: data.json
All Landmarks 2/landmark_10/: data.json
All Landmarks 2/landmark_11/: data.json
All Landmarks 2/landmark_12/: data.json
All Landmarks 2/landmark_13/: data.json
All Landmarks 2/landmark_14/: data.json
aruco_detection/: all_cam_launch.py  aruco_detection_node.py  boundary_builder_node.py  marker_aggregation_node.py
slam/: CMakeLists.txt  package.xml
slam/config/: custom_nav_params.yaml  custom_slam_params.yaml
slam/launch/: all_cam_launch.py  nav_launch.py  slam_launch.py
slam/src/: aruco_detection_node.py  aruco_nav.py  boundary_builder_node.py  landmark_detection_node.py  landmark_localization_node.py  landmark_logger_node.py  marker_aggregation_node.py
slam/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+44 files in other folders)
